Time: 8 ms (84.87%) | Memory: 46.7 MB (57.26%) - LeetSync